[metadata]
name = django-feature-policy
version = 4.0.0
description = django-feature-policy is now django-permissions-policy.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/django-feature-policy-shim
classifiers =
    Development Status :: 7 - Inactive

[options]
install_requires = django-permissions-policy
